--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_North.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_North.yml
@@ -17,13 +17,13 @@ CTA_SIMPIPE:
     VIEW_CONE: "0 deg 0 deg"
     ENERGY_RANGE: "100 GeV 1 TeV"
     CORE_SCATTER: "10 500 m"
-    DATA_DIRECTORY: simtools-data
+    DATA_DIRECTORY: simtools-output/directory_for_grid_upload
     OUTPUT_PATH: simtools-output
     PACK_FOR_GRID_REGISTER: true
     LOG_LEVEL: DEBUG
     SUBMIT_ENGINE: local
   INTEGRATION_TESTS:
     - OUTPUT_FILE: |
-        directory_for_grid_upload/run000010_gamma_za20deg_azm000deg_North_test_layout_test-production-North.log_hist.tar.gz
+        run000010_gamma_za20deg_azm000deg_North_test_layout_test-production-North.log_hist.tar.gz
     - OUTPUT_FILE: |
-        directory_for_grid_upload/run000010_gamma_za20deg_azm000deg_North_test_layout_test-production-North.zst
+        run000010_gamma_za20deg_azm000deg_North_test_layout_test-production-North.zst
