--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_pack_for_grid.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_South_pack_for_grid.yml
@@ -17,11 +17,11 @@ CTA_SIMPIPE:
     VIEW_CONE: "0 deg 0 deg"
     ENERGY_RANGE: "100 GeV 1 TeV"
     CORE_SCATTER: "10 1400 m"
-    DATA_DIRECTORY: simtools-output
+    DATA_DIRECTORY: simtools-output/directory_for_grid_upload
     OUTPUT_PATH: simtools-output
     PACK_FOR_GRID_REGISTER: true
   INTEGRATION_TESTS:
     - OUTPUT_FILE: |
-        directory_for_grid_upload/run000010_gamma_za20deg_azm000deg_South_test_layout_test-production-South-pack-for-grid.log_hist.tar.gz
+        run000010_gamma_za20deg_azm000deg_South_test_layout_test-production-South-pack-for-grid.log_hist.tar.gz
     - OUTPUT_FILE: |
-        directory_for_grid_upload/run000010_gamma_za20deg_azm000deg_South_test_layout_test-production-South-pack-for-grid.zst
+        run000010_gamma_za20deg_azm000deg_South_test_layout_test-production-South-pack-for-grid.zst
