--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_az0deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_az0deg_South_check_output.yml
@@ -15,7 +15,7 @@ CTA_SIMPIPE:
     NSHOW: 5
     ENERGY_RANGE: "100 GeV 500 GeV"
     CORE_SCATTER: "10 700 m"
-    DATA_DIRECTORY: simtools-output
+    DATA_DIRECTORY: simtools-output/directory_for_grid_upload
     OUTPUT_PATH: simtools-output
     SIM_TELARRAY_SEEDS: "1745,290"
     CORSIKA_TEST_SEEDS: True
@@ -23,9 +23,9 @@ CTA_SIMPIPE:
     LOG_LEVEL: DEBUG
   INTEGRATION_TESTS:
     - OUTPUT_FILE: |
-          directory_for_grid_upload/run000001_gamma_za20deg_azm000deg_South_alpha_check_output.log_hist.tar.gz
+        run000001_gamma_za20deg_azm000deg_South_alpha_check_output.log_hist.tar.gz
     - OUTPUT_FILE: |
-        directory_for_grid_upload/run000001_gamma_za20deg_azm000deg_South_alpha_check_output.zst
+        run000001_gamma_za20deg_azm000deg_South_alpha_check_output.zst
     - EXPECTED_OUTPUT:
         # The mean trigger time for all telescopes should be
         # between 0 and 50 ns (very loose requirement)
