--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_North_corsika_corsika_particle_id.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_North_corsika_corsika_particle_id.yml
@@ -18,7 +18,7 @@ CTA_SIMPIPE:
     VIEW_CONE: "0 deg 0 deg"
     ENERGY_RANGE: "100 GeV 2 TeV"
     CORE_SCATTER: "10 1400 m"
-    DATA_DIRECTORY: simtools-output
+    DATA_DIRECTORY: simtools-data
     OUTPUT_PATH: simtools-output
     LOG_LEVEL: DEBUG
   INTEGRATION_TESTS:
