--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_North.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_North.yml
@@ -23,8 +23,8 @@ CTA_SIMPIPE:
     LOG_LEVEL: DEBUG
     SUBMIT_ENGINE: local
   INTEGRATION_TESTS:
-    - OUTPUT_FILE_TESTS:
-        - PATH: PACK_FOR_GRID_REGISTER
+    - TEST_OUTPUT_FILES:
+        - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
           FILE: run000010_gamma_za20deg_azm000deg_North_test_layout_test-production-North.log_hist.tar.gz
-        - PATH: PACK_FOR_GRID_REGISTER
+        - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
           FILE: run000010_gamma_za20deg_azm000deg_North_test_layout_test-production-North.zst
