--- a/tests/integration_tests/config/simulate_prod_gamma_20_deg_az0deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_20_deg_az0deg_South_check_output.yml
@@ -22,8 +22,8 @@ CTA_SIMPIPE:
     PACK_FOR_GRID_REGISTER: simtools-grid-output
     LOG_LEVEL: DEBUG
   INTEGRATION_TESTS:
-    - OUTPUT_FILE_TESTS:
-        - PATH: PACK_FOR_GRID_REGISTER
+    - TEST_OUTPUT_FILES:
+        - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
           FILE: run000001_gamma_za20deg_azm000deg_South_alpha_check_output.zst
           EXPECTED_OUTPUT:
             # The mean trigger time for all telescopes should be
@@ -35,5 +35,5 @@ CTA_SIMPIPE:
             # The mean number of photons per telescope after atmospheric absorption and QE
             # should be between 90 and 1000 (very loose requirement)
             photons: [90, 1000]
-        - PATH: PACK_FOR_GRID_REGISTER
+        - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
           FILE: run000001_gamma_za20deg_azm000deg_South_alpha_check_output.log_hist.tar.gz
