--- a/tests/integration_tests/config/simulate_prod_proton_20_deg_South_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_proton_20_deg_South_check_output.yml
@@ -12,7 +12,7 @@ CTA_SIMPIPE:
     NUMBER_OF_RUNS: 1
     AZIMUTH_ANGLE: South
     ZENITH_ANGLE: 20
-    NSHOW: 1 # Increase the number of showers to 10, otherwise we do not get any triggered events
+    NSHOW: 10 # Increase the number of showers to 10, otherwise we do not get any triggered events
     VIEW_CONE: "0 deg 5 deg" # Decrease the view cone to 5 degrees, otherwise we do not get any triggered events
     ENERGY_RANGE: "200 GeV 800 GeV"
     CORE_SCATTER: "20 700 m"
@@ -23,8 +23,8 @@ CTA_SIMPIPE:
     PACK_FOR_GRID_REGISTER: simtools-grid-output
     LOG_LEVEL: DEBUG
   INTEGRATION_TESTS:
-    - OUTPUT_FILE_TESTS:
-        - PATH: PACK_FOR_GRID_REGISTER
+    - TEST_OUTPUT_FILES:
+        - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
           FILE: run000001_proton_za20deg_azm180deg_South_alpha_check_output.zst
           EXPECTED_OUTPUT:
             # The mean trigger time for all telescopes should be
@@ -36,5 +36,5 @@ CTA_SIMPIPE:
             # The mean number of photons per telescope after atmospheric absorption and QE
             # should be between 75 and 1000 (very loose requirement)
             photons: [75, 1000]
-        - PATH: PACK_FOR_GRID_REGISTER
+        - PATH_DESCRIPTOR: PACK_FOR_GRID_REGISTER
           FILE: run000001_proton_za20deg_azm180deg_South_alpha_check_output.log_hist.tar.gz
