--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -78,7 +78,7 @@ jobs:
         if: matrix.type == 'prod'
         run: |
           echo "docker_tag=$(echo '${{ steps.meta.outputs.tags }}' | head -n 1)" >> "$GITHUB_ENV"
-          echo "DOCKER TAG: $docker_tag"
+          echo "DOCKER TAG: ${{ env.docker_tag }}"
 
       - name: Build Docker image
         uses: docker/build-push-action@v6
