--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -90,18 +90,6 @@ jobs:
           file: ./docker/Dockerfile-${{ matrix.type }}
           tags: ${{ env.TEST_TAG }}
 
-      - name: Save Docker image to tarball
-        if: matrix.type == 'prod'
-        run: |
-          docker save -o simtools.tar ${{ env.TEST_TAG }}
-
-      - name: Upload Docker image tarball
-        if: matrix.type == 'prod'
-        uses: actions/upload-artifact@v4
-        with:
-          name: simtools-tarball
-          path: simtools.tar
-
       # test the prod image with one application using the database
       # and the sim_telarray installation
       - name: Test Docker image
@@ -121,6 +109,17 @@ jobs:
           bash -c "cd /workdir/external && simtools-simulate-prod --config /workdir/external/tests/integration_tests/config/simulate_prod_gamma_20_deg_pack_for_grid.yml"
         shell: /usr/bin/bash -e {0}
 
+      - name: Test command line tools
+        if: matrix.type == 'prod'
+        run: >
+          set -e
+          echo "Reading scripts defined in pyproject.toml"
+          scripts=$(grep 'scripts.simtools-' pyproject.toml | sed -e 's/^scripts\.//' -e 's/ =.*$//')
+          for script in $scripts; do
+            echo "Testing command: $script --help"
+            docker run --rm ${{ env.TEST_TAG }} bash -c "$script --help"
+          done
+
       - name: Push Docker image
         uses: docker/build-push-action@v6
         with:
@@ -135,30 +134,3 @@ jobs:
 
     outputs:
       docker_tag: ${{ env.docker_tag }}
-
-  test_commandline_tools:
-    runs-on: ubuntu-latest
-    needs: build-simtools-container
-    steps:
-
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Download Docker image tarball
-        uses: actions/download-artifact@v4
-        with:
-          name: simtools-tarball
-
-      - name: Load Docker image from tarball
-        run: |
-          docker load -i simtools.tar
-
-      - name: Test command line tools
-        run: |
-          set -e
-          echo "Reading scripts defined in pyproject.toml"
-          scripts=$(grep 'scripts.simtools-' pyproject.toml | sed -e 's/^scripts\.//' -e 's/ =.*$//')
-          for script in $scripts; do
-            echo "Testing command: $script --help"
-            $script --help
-          done
