--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -109,7 +109,7 @@ jobs:
           bash -c "cd /workdir/external && simtools-simulate-prod --config /workdir/external/tests/integration_tests/config/simulate_prod_gamma_20_deg_pack_for_grid.yml"
         shell: /usr/bin/bash -e {0}
 
-      - name: Test command line tools
+      - name: Test Command Line Tools
         if: matrix.type == 'prod'
         run: >
           set -e
@@ -119,6 +119,7 @@ jobs:
             echo "Testing command: $script --help"
             docker run --rm ${{ env.TEST_TAG }} bash -c "$script --help"
           done
+        shell: /usr/bin/bash -e {0}
 
       - name: Push Docker image
         uses: docker/build-push-action@v6
