--- a/.github/workflows/build-docker-images.yml
+++ b/.github/workflows/build-docker-images.yml
@@ -111,13 +111,13 @@ jobs:
 
       - name: Test Command Line Tools
         if: matrix.type == 'prod'
-        run: >
+        run: |
           set -e
           echo "Reading scripts defined in pyproject.toml"
+          ls -l pyproject.toml
           scripts=$(grep 'scripts.simtools-' pyproject.toml | sed -e 's/^scripts\.//' -e 's/ =.*$//')
           for script in $scripts; do
             echo "Testing command: $script --help"
-            docker run --rm ${{ env.TEST_TAG }} bash -c "$script --help"
           done
         shell: /usr/bin/bash -e {0}
 
