--- a/tests/integration_tests/config/derive_photon_electron_spectrum_lst.yml
+++ b/tests/integration_tests/config/derive_photon_electron_spectrum_lst.yml
@@ -11,4 +11,8 @@ CTA_SIMPIPE:
     USE_PLAIN_OUTPUT_PATH: true
     LOG_LEVEL: DEBUG
   INTEGRATION_TESTS:
+    - OUTPUT_FILE: test_single_pe_lst.dat
     - OUTPUT_FILE: test_single_pe_lst.ecsv
+    - REFERENCE_OUTPUT_FILE: |
+        tests/resources/spe_LST_2022-04-27_AP2.0e-4.ecsv
+      TOLERANCE: 1.e-4
