--- a/.github/workflows/CI-docs.yml
+++ b/.github/workflows/CI-docs.yml
@@ -34,6 +34,20 @@ jobs:
             exit 1
           fi
 
+      - name: Check that all applications are documented
+        run: |-
+          scripts=$(grep 'scripts.simtools-' pyproject.toml | sed -e 's/^scripts\.//' -e 's/ =.*$//')
+          FULLY_DOCUMENTED="TRUE"
+          for S in "${scripts[@]}"; do
+              if -e docs/source/user-guide/applications/$S.rst; then
+                echo "Undocumented script: $S"
+                FULLY_DOCUMENTED="FALSE"
+              fi
+          done
+          if [[ "$FULLY_DOCUMENTED" = "FALSE" ]]; then
+              exit 1
+          fi
+
       - name: Check for complete API documentation
         run: |-
           MODULES=$(find src/simtools -type f -name "*.py" \
