--- a/.github/workflows/CI-docs.yml
+++ b/.github/workflows/CI-docs.yml
@@ -38,8 +38,8 @@ jobs:
         run: |-
           scripts=$(grep 'scripts.simtools-' pyproject.toml | sed -e 's/^scripts\.//' -e 's/ =.*$//')
           FULLY_DOCUMENTED="TRUE"
-          for S in "${scripts[@]}"; do
-              if -e docs/source/user-guide/applications/$S.rst; then
+          for S in ${scripts[@]}; do
+              if [ ! -e "docs/source/user-guide/applications/$S.rst" ]; then
                 echo "Undocumented script: $S"
                 FULLY_DOCUMENTED="FALSE"
               fi
