--- a/.github/workflows/CI-docs.yml
+++ b/.github/workflows/CI-docs.yml
@@ -38,7 +38,7 @@ jobs:
         run: |-
           scripts=$(grep 'scripts.simtools-' pyproject.toml | sed -e 's/^scripts\.//' -e 's/ =.*$//')
           FULLY_DOCUMENTED="TRUE"
-          for S in "${scripts[@]}"; do
+          for S in $scripts; do
               if [ ! -e "docs/source/user-guide/applications/$S.rst" ]; then
                 echo "Undocumented script: $S"
                 FULLY_DOCUMENTED="FALSE"
@@ -47,6 +47,7 @@ jobs:
           if [[ "$FULLY_DOCUMENTED" = "FALSE" ]]; then
               exit 1
           fi
+        shell: /usr/bin/bash -e {0}
 
       - name: Check for complete API documentation
         run: |-
