--- a/tests/integration_tests/config/derive_photon_electron_spectrum_lst_ecsv.yml
+++ b/tests/integration_tests/config/derive_photon_electron_spectrum_lst_ecsv.yml
@@ -1,9 +1,9 @@
 CTA_SIMPIPE:
   APPLICATION: simtools-derive-photon-electron-spectrum
-  TEST_NAME: LST
+  TEST_NAME: LST_ecsv
   CONFIGURATION:
-    INPUT_SPECTRUM: ./tests/resources/SinglePhe_spectrum_totalfit_19pixel-average_20200601.csv
-    AFTERPULSE_SPECTRUM: ./tests/resources/LST_afterpulses.dat
+    INPUT_SPECTRUM: ./tests/resources/SinglePhe_spectrum_totalfit_19pixel-average_20200601.ecsv
+    AFTERPULSE_SPECTRUM: ./tests/resources/LST_afterpulses.ecsv
     STEP_SIZE: 0.02
     USE_NORM_SPE: true
     OUTPUT_PATH: simtools-output
