--- a/tests/integration_tests/config/db_get_parameter_from_db_telescope_parameter_version.yml
+++ b/tests/integration_tests/config/db_get_parameter_from_db_telescope_parameter_version.yml
@@ -1,8 +1,8 @@
 CTA_SIMPIPE:
   APPLICATION: simtools-db-get-parameter-from-db
-  TEST_NAME: telescope_parameter
+  TEST_NAME: telescope_parameter_parameter_version
   CONFIGURATION:
     SITE: North
     TELESCOPE: LSTN-01
     PARAMETER: mirror_list
-    MODEL_VERSION: 6.0.0
+    PARAMETER_VERSION: 1.0.0
