--- a/tests/integration_tests/config/db_get_parameter_from_db_array_element_position_ground.yml
+++ b/tests/integration_tests/config/db_get_parameter_from_db_array_element_position_ground.yml
@@ -2,13 +2,13 @@ CTA_SIMPIPE:
   APPLICATION: simtools-db-get-parameter-from-db
   TEST_NAME: telescope_parameter_array_element_position_ground
   CONFIGURATION:
-    SITE: North
-    TELESCOPE: MSTN-09
+    SITE: South
+    TELESCOPE: SSTS-09
     PARAMETER: array_element_position_ground
     MODEL_VERSION: 6.0.0
     OUTPUT_FILE: test.json
     OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
     - REFERENCE_OUTPUT_FILE: |
-        ./tests/model_parameters/resources/array_element_position_ground.json
+        ./tests/resources/model_parameters/array_element_position_ground.json
       TOLERANCE: 1.e-2
