--- a/tests/integration_tests/config/convert_model_parameter_from_simtel_num_gains.yml
+++ b/tests/integration_tests/config/convert_model_parameter_from_simtel_num_gains.yml
@@ -5,7 +5,7 @@ CTA_SIMPIPE:
     SIMTEL_CFG_FILE: ./tests/resources/simtel_config_test_la_palma.cfg
     SIMTEL_TELESCOPE_NAME: CT1
     TELESCOPE: LSTN-01
-    MODEL_VERSION: "6.0.0"
+    PARAMETER_VERSION: "0.1.0"
     SCHEMA: ./tests/resources/num_gains.schema.yml
     OUTPUT_PATH: simtools-output
     OUTPUT_FILE: num_gains.json
