--- a/tests/integration_tests/config/submit_model_parameter_from_external_submit_focus_offset.yml
+++ b/tests/integration_tests/config/submit_model_parameter_from_external_submit_focus_offset.yml
@@ -6,7 +6,7 @@ CTA_SIMPIPE:
     VALUE: "6.55 cm, 0.0 deg, 0.0, 0.0"
     INSTRUMENT: LSTN-01
     SITE: North
-    MODEL_VERSION: 6.0.0
+    PARAMETER_VERSION: 0.1.0
     INPUT_META: null
     OUTPUT_PATH: simtools-output
     USE_PLAIN_OUTPUT_PATH: true
