--- a/tests/integration_tests/config/simulate_prod_gamma_40_deg_North_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_40_deg_North_check_output.yml
@@ -37,3 +37,11 @@ CTA_SIMPIPE:
             # The mean number of photons per telescope after atmospheric absorption and QE
             # should be between 90 and 1000 (very loose requirement)
             photons: [90, 1000]
+    - TEST_SIMTEL_CFG_FILES:
+          tests/resources/sim_telarray_configurations/CTA-North-LSTN-01-6.0.0_test.cfg
+    - TEST_SIMTEL_CFG_FILES:
+          tests/resources/sim_telarray_configurations/CTA-North-LSTN-02-6.0.0_test.cfg
+    - TEST_SIMTEL_CFG_FILES:
+          tests/resources/sim_telarray_configurations/CTA-North-LSTN-01-6.0.0_test.cfg
+    - TEST_SIMTEL_CFG_FILES:
+          tests/resources/sim_telarray_configurations/CTA-alpha-North-6.0.0_test.cfg
