--- a/tests/resources/sim_telarray_configurations/CTA-South-LSTS-01-6.0.0_test.cfg
+++ b/tests/resources/sim_telarray_configurations/CTA-South-LSTS-01-6.0.0_test.cfg
@@ -1,21 +1,21 @@
 %==================================================
 % TELESCOPE CONFIGURATION FILE
-% Site: North
+% Site: South
 % ModelVersion: 6.0.0
-% TelescopeModelName: LSTN-02
-% Label: test-production-North
+% TelescopeModelName: LSTS-01
+% Label: check_output
 %==================================================
 %
 #ifdef TELESCOPE
-   echo Configuration for LSTN-02 - TELESCOPE $(TELESCOPE)
+   echo Configuration for LSTS-01 - TELESCOPE $(TELESCOPE)
 #endif
 
-altitude = 2156.0
+altitude = 2147.0
 asum_clipping = 9999.0
 asum_offset = 0.0
 asum_shaping_file = none
 asum_threshold = 260.7
-atmospheric_transmission = atm_trans_2156_1_3_2_0_0_0.1_0.1.dat
+atmospheric_transmission = atm_trans_2147_1_10_2_0_2147.dat
 axes_offsets = 0.0 0.0
 camera_body_diameter = 348.0
 camera_body_shape = 2
@@ -89,12 +89,12 @@ mirror_align_random_vertical = 0.0019 28.0 0.0 0.0
 mirror_class = 0
 mirror_degraded_reflection = 0.8
 mirror_focal_length = 0.0
-mirror_list = mirror_CTA-N-LST2_v2020-04-07_rotated.dat
+mirror_list = mirror_CTA-S-LST_v2020-04-07_rotated.dat
 mirror_offset = 93.25
 mirror_reflection_random_angle = 0.0075 0.22 0.022
-mirror_reflectivity = ref_LST2_2022_04_01.dat
+mirror_reflectivity = ref_LST_2020-04-23.dat
 multiplicity_offset = -0.5
-nightsky_background = all: 0.241539
+nightsky_background = all: 0.244637
 nsb_autoscale_airmass = 0.84 0.29
 nsb_offaxis = 0.0 0.0 0.0 0.0 0.0
 num_gains = 2
@@ -135,9 +135,9 @@ store_photoelectrons = 20
 tailcut_scale = 2.6
 config_release = 6.0.0 written by simtools v0.9.0
 config_version = 6.0.0
-camera_config_name = LSTN-02
+camera_config_name = LSTS-01
 camera_config_variant =
 camera_config_version = 6.0.0
-optics_config_name = LSTN-02
+optics_config_name = LSTS-01
 optics_config_variant =
 optics_config_version = 6.0.0
