--- a/tests/integration_tests/config/simulate_prod_gamma_40_deg_North_check_output.yml
+++ b/tests/integration_tests/config/simulate_prod_gamma_40_deg_North_check_output.yml
@@ -38,10 +38,14 @@ CTA_SIMPIPE:
             # should be between 90 and 1000 (very loose requirement)
             photons: [90, 1000]
     - TEST_SIMTEL_CFG_FILES:
-          tests/resources/sim_telarray_configurations/CTA-North-LSTN-01-6.0.0_test.cfg
+          5.0.0: tests/resources/sim_telarray_configurations/CTA-North-LSTN-01-5.0.0_test.cfg
+          6.0.0: tests/resources/sim_telarray_configurations/CTA-North-LSTN-01-6.0.0_test.cfg
     - TEST_SIMTEL_CFG_FILES:
-          tests/resources/sim_telarray_configurations/CTA-North-LSTN-02-6.0.0_test.cfg
+          5.0.0:: tests/resources/sim_telarray_configurations/CTA-North-LSTN-02-5.0.0_test.cfg
+          6.0.0:: tests/resources/sim_telarray_configurations/CTA-North-LSTN-02-6.0.0_test.cfg
     - TEST_SIMTEL_CFG_FILES:
-          tests/resources/sim_telarray_configurations/CTA-North-LSTN-01-6.0.0_test.cfg
+          5.0.0: tests/resources/sim_telarray_configurations/CTA-North-MSTN-01-5.0.0_test.cfg
+          6.0.0: tests/resources/sim_telarray_configurations/CTA-North-MSTN-01-6.0.0_test.cfg
     - TEST_SIMTEL_CFG_FILES:
-          tests/resources/sim_telarray_configurations/CTA-alpha-North-6.0.0_test.cfg
+          5.0.0: tests/resources/sim_telarray_configurations/CTA-alpha-North-5.0.0_test.cfg
+          6.0.0: tests/resources/sim_telarray_configurations/CTA-alpha-North-6.0.0_test.cfg
