Reference model corrections

--- a/tests/resources/sim_telarray_configurations/CTA-South-MSTS-01-5.0.0_test.cfg
+++ b/tests/resources/sim_telarray_configurations/CTA-South-MSTS-01-5.0.0_test.cfg
@@ -107,7 +107,7 @@ mirror_offset = 0.0
 mirror_reflection_random_angle = 0.006759 0.125 0.037
 mirror_reflectivity = ref_AlSiO2HfO2.dat
 multiplicity_offset = -0.5
-nightsky_background = all: 0.209051
+nightsky_background = all: 0.20905
 nsb_autoscale_airmass = 0.84 0.29
 nsb_offaxis = 0.0 0.0 0.0 0.0 0.0
 num_gains = 1
@@ -126,7 +126,7 @@ quantum_efficiency = qe_R12992-100-05b.dat
 random_focal_length = 3.9 0.0
 telescope_random_angle = 0.0
 telescope_random_error = 0.0
-telescope_transmission = 0.908661 0.0 0.0 0.0 0.0 0.0
+telescope_transmission = 0.908661 0.0154576 4 1.21166 0 0
 teltrig_min_sigsum = 0.0
 teltrig_min_time = 0.0
 transit_time_calib_error = 0.0
