--- a/tests/resources/sim_telarray_configurations/CTA-South-SSTS-01-5.0.0_test.cfg
+++ b/tests/resources/sim_telarray_configurations/CTA-South-SSTS-01-5.0.0_test.cfg
@@ -56,7 +56,7 @@ dsum_pre_clipping = 0
 dsum_prescale = 40 256
 dsum_presum_max = 127
 dsum_presum_shift = 1
-dsum_shaping_file = CTA-ULTRA6-dsum-shaping-FlashCam-2a-int.dat
+dsum_shaping_file = none
 dsum_shaping_renormalize = 0
 dsum_threshold = 0.0
 dsum_zero_clip = 1
@@ -107,7 +107,7 @@ mirror_reflection_random_angle = 0.0255 0.0 0.0
 mirror_reflectivity = ref_astri-2d_2018-01-17.dat
 mirror_secondary_reflectivity = ref_astri-2d_2018-01-17.dat
 multiplicity_offset = -0.5
-nightsky_background = all: 0.0387262
+nightsky_background = all: 0.03873
 nsb_autoscale_airmass = 0.83 0.2
 nsb_gain_drop_scale = 0.0
 nsb_offaxis = 1.0 0.04478 7.844 2.0282 0.0
@@ -146,7 +146,7 @@ transit_time_compensate_error = 0.2
 transit_time_compensate_step = 1.0
 transit_time_error = 0.1
 transit_time_jitter = 0.01
-trigger_current_limit = 2000.0
+trigger_current_limit = 20.0
 trigger_delay_compensation = 0.0 0.0 0.0 0.0
 trigger_pixels = 2
 iobuf_maximum = 1000000000
