--- a/tests/integration_tests/config/db_get_parameter_from_db_telescope_parameter_version.yml
+++ b/tests/integration_tests/config/db_get_parameter_from_db_telescope_parameter_version.yml
@@ -6,3 +6,9 @@ CTA_SIMPIPE:
     TELESCOPE: LSTN-01
     PARAMETER: mirror_list
     PARAMETER_VERSION: 2.0.0
+    OUTPUT_FILE: test.json
+    OUTPUT_PATH: simtools-output
+    LOG_LEVEL: DEBUG
+  INTEGRATION_TESTS:
+    - REFERENCE_OUTPUT_FILE: |
+        ./tests/resources/model_parameters/mirror_list.json
