--- a/tests/resources/sim_telarray_configurations/CTA-South-SSTS-01-5.0.0_test.cfg
+++ b/tests/resources/sim_telarray_configurations/CTA-South-SSTS-01-5.0.0_test.cfg
@@ -12,7 +12,7 @@
 
 adjust_gain = 1.0
 altitude = 2147.0
-asum_clipping = 0.0
+asum_clipping = 9999
 asum_offset = 0.0
 asum_shaping_file = none
 asum_threshold = 0.0
@@ -48,18 +48,18 @@ discriminator_var_gate_length = 0.0
 discriminator_var_sigsum_over_threshold = 0.0
 discriminator_var_threshold = 0.25
 discriminator_var_time_over_threshold = 0.0
-dsum_clipping = 85
+dsum_clipping = 0
 dsum_ignore_below = 0
 dsum_offset = 0.0
-dsum_pedsub = 0
+dsum_pedsub = 1
 dsum_pre_clipping = 0
-dsum_prescale = 40 256
-dsum_presum_max = 127
-dsum_presum_shift = 1
+dsum_prescale = all: 0
+dsum_presum_max = 0
+dsum_presum_shift = 0
 dsum_shaping_file = none
 dsum_shaping_renormalize = 0
 dsum_threshold = 0.0
-dsum_zero_clip = 1
+dsum_zero_clip = 0
 effective_focal_length = 215.191 0.0 0.0 0.0 0.0
 fadc_ac_coupled = 0
 fadc_amplitude = 2.77
@@ -97,8 +97,8 @@ focal_surface_ref_radius = 1.0
 focus_offset = 0.0 0.0 0.0 0.0
 gain_variation = 0.05
 mirror2_degraded_reflection = 1.0
-mirror_align_random_horizontal = 0.0 31.0 0.0135 0.012
-mirror_align_random_vertical = 0.0 31.0 0.0135 0.012
+mirror_align_random_horizontal = 0.0 0.0 0.0 0.0
+mirror_align_random_vertical = 0.0 0.0 0.0 0.0
 mirror_class = 2
 mirror_degraded_reflection = 1.0
 mirror_list = none
@@ -142,8 +142,8 @@ telescope_transmission = 0.92362 1.0 0.03668 1.7454 0.858 0.0
 teltrig_min_sigsum = 0.0
 teltrig_min_time = 0.5
 transit_time_calib_error = 0.0
-transit_time_compensate_error = 0.2
-transit_time_compensate_step = 1.0
+transit_time_compensate_error = 0.
+transit_time_compensate_step = 0.
 transit_time_error = 0.1
 transit_time_jitter = 0.01
 trigger_current_limit = 20.0
