Corrections to reference models

--- a/tests/resources/sim_telarray_configurations/CTA-North-LSTN-01-5.0.0_test.cfg
+++ b/tests/resources/sim_telarray_configurations/CTA-North-LSTN-01-5.0.0_test.cfg
@@ -11,6 +11,7 @@
 #endif
 
 altitude = 2158.0
+array_window = 1000.0
 asum_clipping = 9999.0
 asum_offset = 0.0
 asum_shaping_file = none
@@ -94,7 +95,7 @@ mirror_offset = 93.25
 mirror_reflection_random_angle = 0.0075 0.125 0.037
 mirror_reflectivity = ref_LST_2020-04-23.dat
 multiplicity_offset = -0.5
-nightsky_background = all: 0.23801
+nightsky_background = all: 0.238006
 nsb_autoscale_airmass = 0.84 0.29
 nsb_offaxis = 0.0 0.0 0.0 0.0 0.0
 num_gains = 2
