--- a/tests/resources/sim_telarray_configurations/CTA-North-LSTN-03-5.0.0_test.cfg
+++ b/tests/resources/sim_telarray_configurations/CTA-North-LSTN-03-5.0.0_test.cfg
@@ -11,6 +11,7 @@
 #endif
 
 altitude = 2158.0
+array_window = 1000.0
 asum_clipping = 9999.0
 asum_offset = 0.0
 asum_shaping_file = none
@@ -94,7 +95,7 @@ mirror_offset = 93.25
 mirror_reflection_random_angle = 0.0075 0.125 0.037
 mirror_reflectivity = ref_LST_2020-04-23.dat
 multiplicity_offset = -0.5
-nightsky_background = all: 0.238006
+nightsky_background = all: 0.244985
 nsb_autoscale_airmass = 0.84 0.29
 nsb_offaxis = 0.0 0.0 0.0 0.0 0.0
 num_gains = 2
@@ -106,7 +107,7 @@ pm_average_gain = 40000.0
 pm_collection_efficiency = 1.0
 pm_gain_index = 3.92
 pm_photoelectron_spectrum = spe_LST_2020-05-09_AP2.0e-4.dat
-pm_transit_time = 20.89 9 350 1135
+pm_transit_time = 20.89 9.0 350.0 1135.0
 pm_voltage_variation = 0.03
 qe_variation = 0.03
 quantum_efficiency = qe_lst2-4_20200318_high+low.dat
