--- a/tests/resources/sim_telarray_configurations/CTA-South-SSTS-01-5.0.0_test.cfg
+++ b/tests/resources/sim_telarray_configurations/CTA-South-SSTS-01-5.0.0_test.cfg
@@ -12,6 +12,7 @@
 
 adjust_gain = 1.0
 altitude = 2147.0
+array_window = 1000.0
 asum_clipping = 0.0
 asum_offset = 0.0
 asum_shaping_file = none
@@ -107,7 +108,7 @@ mirror_reflection_random_angle = 0.0255 0.0 0.0
 mirror_reflectivity = ref_astri-2d_2018-01-17.dat
 mirror_secondary_reflectivity = ref_astri-2d_2018-01-17.dat
 multiplicity_offset = -0.5
-nightsky_background = all: 0.03873
+nightsky_background = all: 0.0387262
 nsb_autoscale_airmass = 0.83 0.2
 nsb_gain_drop_scale = 0.0
 nsb_offaxis = 1.0 0.04478 7.844 2.0282 0.0
@@ -142,11 +143,11 @@ telescope_transmission = 0.92362 1.0 0.03668 1.7454 0.858 0.0
 teltrig_min_sigsum = 0.0
 teltrig_min_time = 0.5
 transit_time_calib_error = 0.0
-transit_time_compensate_error = 0.
-transit_time_compensate_step = 0.
+transit_time_compensate_error = 0.0
+transit_time_compensate_step = 0.0
 transit_time_error = 0.1
 transit_time_jitter = 0.01
-trigger_current_limit = 20.0
+trigger_current_limit = 2000.0
 trigger_delay_compensation = 0.0 0.0 0.0 0.0
 trigger_pixels = 2
 iobuf_maximum = 1000000000
