prod5 telescope transmission

--- a/tests/resources/sim_telarray_configurations/CTA-North-MSTN-01-5.0.0_test.cfg
+++ b/tests/resources/sim_telarray_configurations/CTA-North-MSTN-01-5.0.0_test.cfg
@@ -127,7 +127,7 @@ quantum_efficiency = qe_R12992-100-05b.dat
 random_focal_length = 3.9 0.0
 telescope_random_angle = 0.0
 telescope_random_error = 0.0
-telescope_transmission = 0.908661 0.0154576 4.0 1.21166
+telescope_transmission = 0.908661 0.0 0.0 0.0 0.0 0.0
 teltrig_min_sigsum = 0.0
 teltrig_min_time = 1.0
 transit_time_calib_error = 0.0
