--- a/tests/integration_tests/config/docs_produce_reports_run.yml
+++ b/tests/integration_tests/config/docs_produce_reports_run.yml
@@ -7,4 +7,4 @@ CTA_SIMPIPE:
     MODEL_VERSION: 6.0.0
     OUTPUT_PATH: simtools-output
   INTEGRATION_TESTS:
-    - OUTPUT_FILE: v6.0.0_LSTN-01.md
+    - OUTPUT_FILE: LSTN-01.md
