improve readability of metrics file

--- a/tests/resources/production_simulation_config_metrics.yaml
+++ b/tests/resources/production_simulation_config_metrics.yaml
@@ -6,7 +6,7 @@
 uncertainty_effective_area:
   target_error:
     value: 0.02
-  valid_range:
+  energy_range:
     value:
       - 0.04
       - 200
@@ -14,7 +14,7 @@ uncertainty_effective_area:
 energy_estimate:
   target_error:
     value: 0.05
-  valid_range:
+  energy_range:
     value:
       - 0.04
       - 200
