--- a/docker/Dockerfile-simtelarray
+++ b/docker/Dockerfile-simtelarray
@@ -1,5 +1,5 @@
-FROM almalinux AS build_image
-WORKDIR /workdir
+FROM almalinux:9.5 AS build_image
+WORKDIR /workdir/sim_telarray
 ENV DEBIAN_FRONTEND=noninteractive
 ARG BUILD_OPT="prod6-sc"
 ARG HADRONIC_MODEL="qgs2"
@@ -10,28 +10,23 @@ RUN yum update -y && yum install -y \
     which \
     gcc-fortran \
     gsl-devel \
-    patch \
-    && \
+    patch && \
     yum clean all
 
-# corsika and sim_telarray
-RUN mkdir sim_telarray
-COPY corsika7.7_simtelarray.tar.gz sim_telarray
-RUN cd sim_telarray && \
-    tar -xvf corsika7.7_simtelarray.tar.gz && \
-    rm -f examples-with-data.tar.gz && \
+ADD corsika_simtelarray.tar.gz .
+RUN rm -f examples-with-data.tar.gz && \
     rm -f sim_telarray_config.tar.gz && \
     ./build_all $BUILD_OPT $HADRONIC_MODEL gsl
 
-RUN find sim_telarray/ -name "*.tar.gz" -exec rm -f {} \;
 
 # corsika source code is removed to follow
 # the corsika non-distribution policy.
-RUN rm -f sim_telarray/corsika-run && \
-    mv sim_telarray/corsika-77*/run sim_telarray/corsika-run && \
-    rm -rf sim_telarray/corsika-77*
+RUN rm -f ./corsika-run && \
+    mv ./corsika-77*/run ./corsika-run && \
+    rm -rf ./corsika-77* && \
+    find . -name "*.tar.gz" -exec rm -f {} \;
 
-FROM almalinux/9-minimal
+FROM almalinux:9.5-minimal
 WORKDIR /workdir
 ENV DEBIAN_FRONTEND=noninteractive
 COPY --from=build_image /workdir/sim_telarray/ /workdir/sim_telarray/
