--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -19,8 +19,35 @@ env:
 
 jobs:
 
+  download-corsika:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        simtel_version: ['240927']
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Download corsika-simtel-package
+        run: |
+          echo "CLOUD_SIMTEL_${{ matrix.simtel_version }}"
+          wget --no-verbose https://syncandshare.desy.de/index.php/s/${{ secrets[format('CLOUD_SIMTEL_{0}', matrix.simtel_version)] }}/download
+          mv download corsika_simtelarray_${{ matrix.simtel_version }}.tar.gz
+          wget --no-verbose ${{ env.CLOUD_URL }}/${{ secrets.CLOUD_CORSIKA_OPT }}/download
+          mv download corsikaOptPatch.tar.gz
+
+      - name: Upload corsika-simtel-package
+        uses: actions/upload-artifact@v4
+        with:
+          name: corsika-simtelarray-package-${{ matrix.simtel_version }}
+          path: |
+            corsika_simtelarray_${{ matrix.simtel_version }}.tar.gz
+            corsikaOptPatch.tar.gz
+
   build-corsika-simtelarray:
     runs-on: ubuntu-latest
+    needs: download-corsika
     permissions:
       contents: read
       packages: write
@@ -38,11 +65,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: download corsikasimtelpackage
+      - name: Download corsika-simtel-package
+        uses: actions/download-artifact@v4
+        with:
+          name: corsika-simtelarray-package-${{ matrix.simtel_version }}
+          path: ./downloaded-artifacts
+
+      - name: Rename corsika-simtel-package files
         run: |
-          echo "CLOUD_SIMTEL_${{ matrix.simtel_version }}"
-          wget --no-verbose ${{ env.CLOUD_URL }}/${{ secrets[format('CLOUD_SIMTEL_{0}', matrix.simtel_version)] }}/download
-          mv download corsika_simtelarray.tar.gz
+          mv ./downloaded-artifacts/corsika_simtelarray_${{ matrix.simtel_version }}.tar.gz corsika_simtelarray.tar.gz
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -84,6 +115,7 @@ jobs:
 
   build-optimized-corsika-simtelarray:
     runs-on: ubuntu-latest
+    needs: download-corsika
     permissions:
       contents: read
       packages: write
@@ -105,13 +137,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: download corsika-simtel-package
+      - name: Download corsika-simtel-package
+        uses: actions/download-artifact@v4
+        with:
+          name: corsika-simtelarray-package-${{ matrix.simtel_version }}
+          path: ./downloaded-artifacts
+
+      - name: Rename corsika-simtel-package files
         run: |
-          echo "CLOUD_SIMTEL_${{ matrix.simtel_version }}"
-          wget --no-verbose ${{ env.CLOUD_URL }}/${{ secrets[format('CLOUD_SIMTEL_{0}', matrix.simtel_version)] }}/download
-          mv download corsika_simtelarray.tar.gz
-          wget --no-verbose ${{ env.CLOUD_URL }}/${{ secrets.CLOUD_CORSIKA_OPT }}/download
-          mv download corsikaOptPatch.tar.gz
+          mv ./downloaded-artifacts/corsika_simtelarray_${{ matrix.simtel_version }}.tar.gz corsika_simtelarray.tar.gz
+          mv ./downloaded-artifacts/corsikaOptPatch.tar.gz corsikaOptPatch.tar.gz
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
