--- a/.github/workflows/build-docker-corsika-simtelarray-image.yml
+++ b/.github/workflows/build-docker-corsika-simtelarray-image.yml
@@ -109,8 +109,7 @@ jobs:
           platforms: linux/amd64,linux/arm64/v8
           build-args: '{"BUILD_OPT": ${{ matrix.production }}, "HADRONIC_MODEL": "${{ matrix.hadronic_model }}"}'
           push:
-#            ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
-            ${{ github.event_name == 'release' || github.event.pull_request.merged == true }}
+            ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
           file: ./docker/Dockerfile-simtelarray
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}-corsika-sim-telarray-${{ env.LABELS }}
@@ -184,8 +183,7 @@ jobs:
             CORSIKA_VERSION=${{ matrix.corsika_version }}
             BERNLOHR_VERSION=${{ matrix.bernlohr_version }}
           push:
-#            ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
-            ${{ github.event_name == 'release' || github.event.pull_request.merged == true }}
+            ${{ github.event_name == 'release' || github.event.pull_request.merged == true || github.event_name == 'workflow_dispatch' }}
           file: ./docker/Dockerfile-simtelarray-cerenkopt
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ env.LABELS }}
